# universal-startfile

./: .appveyor.yml  .pylint.ini  .tool-versions  .verchew.ini  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: main.yml
docs/: requirements.txt
src/startfile/: __init__.py  utils.py
startfile/: __init__.py  utils.py
startfile/tests/: test_utils.py
tests/: conftest.py
tests/int/: test_startfile.py
tests/unit/: test_utils.py
